--- a/public/index.html
+++ b/public/index.html
@@ -1,31 +1,17 @@
 <!DOCTYPE html>
-<html lang="ja">
-<head>
-    <meta charset="UTF-8">
-    <title>WebSocketについて</title>
-</head>
-<body>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title>Socket.IO Sample</title>
+    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
 
+    <!-- socket.io client -->
+    <script type="text/javascript" src="/socket.io/socket.io.js"></script>
 
-
-
-
-
-
-
-   <script>
-      
-
-
-
-
-
-
-   </script>
- 
-
-
-</body>
+    <!-- original script -->
+    <script type="text/javascript" src="client.js"></script>
+  </head>
+  <body>
+    <p>開発コンソールを開き、データがやり取りされいることを確認して下さい。</p>
+  </body>
 </html>
-
-
