--- a/public/index.html
+++ b/public/index.html
@@ -2,34 +2,15 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Socket.IO Sample</title>
+    <title>ws chat</title>
     <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
-    <!-- socket.io client -->
     <script type="text/javascript" src="/socket.io/socket.io.js"></script>
-    <!-- original script -->
-    <script type="text/javascript" src="client.js"></script>
+    <script type="text/javascript" src="/chat.js"></script>
   </head>
   <body>
-    <p>Node.jsの勉強</p>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-   </body>
+    <h1>ws chat</h1>
+    <input id="message" type="text"></input>
+    <input id="update" type="submit" value="update"></input>
+    <ul id="posts"></ul>
+  </body>
 </html>
